linuxtips/day-5/k8s/deployment-ingress-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - image: dockersamples/static-site
          name: app1
          ports:
            - containerPort: 80
          resources:
