linuxtips/day-5/k8s/deployment-ingress-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - image: dockersamples/static-site
          name: app2
          ports:
            - containerPort: 80
          resources:
